# python_fast

./: .env  .env.example  .env.test.example  .gitignore  Makefile  main.py  package.json  pnpm-lock.yaml  pyproject.toml
apps/web-service/: pyproject.toml
apps/web-service/app/: main.py
apps/web-service/app/api/: auth.py  items.py  products.py  settings.py  upload.py  welcome.py
apps/web-service/app/core/: auth.py  config.py  database.py  db.py  openapi.py
apps/web-service/app/exception/: __init__.py  auth.py  upload.py
apps/web-service/app/model/: __init__.py  engine.py  main.py  setting.py  setting_group.py  user.py
apps/web-service/app/schema/: category.py  item.py  setting.py  upload.py  user.py
apps/web-service/app/service/: main.py  product_service.py  setting_service.py  upload_service.py  user_service.py
apps/web-service/migrations/: env.py  env1.py
apps/web-service/migrations/versions/: 1dbfc215f7ae_init.py  248521830967_update_setting_key_unique.py  42f9e206b2a3_delete_product_brand.py  680245532545_add_user.py  7cce275f827a_.py  7e4f36142ebb_add_product_brand.py  e29afc6e9935_init.py  f4f4f7af250b_init.py
apps/web-service/test/: conftest.py
apps/web-service/test/e2e/: conftest.py  test_auth.py  test_categories.py  test_products.py  test_settings.py  test_skus.py  test_upload.py
apps/web-service/test/integration/: conftest.py  test_api_auth.py  test_api_categories.py  test_api_products.py  test_api_settings.py  test_api_skus.py  test_api_upload.py  test_categories.py  test_category_service.py  test_product_service.py  test_products.py  (+5 more)
(+33 files in other folders)
