[project]
name = "web-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi[standard]==0.136.3",
    "psycopg2-binary==2.9.12",
    "pydantic-settings==2.14.1",
    "sqlalchemy[asyncio]==2.0.50",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]